# OC_P11

./: .env  .gitignore  README.md  app.db  app.py  clubs.json  config.py  pyproject.toml  requirements.txt  server.py
authentication_app/: decorator.py
authentication_app/forms/: __init__.py  admin.py  authenticated.py  public.py
authentication_app/models/: __init__.py  user.py
authentication_app/templates/: delete_user_confirmation.html  home.html  list_users.html  my_profile.html  user_form.html
authentication_app/templates/partials/: user_form_title.html
authentication_app/urls/: __init__.py  admin.py  authenticated.py  public.py
authentication_app/views/: admin.py  authenticated.py  public.py
club_app/forms/: __init__.py  admin.py  authenticated.py
club_app/models/: club.py
club_app/templates/: club_form.html  delete_club_confirmation.html  list_clubs.html  my_club.html
club_app/templates/partials/: club_form_title.html
club_app/urls/: admin.py  authenticated.py  public.py
club_app/views/: admin.py  authenticated.py  public.py
competition_app/forms/: __init__.py  admin.py  authenticated.py
competition_app/models/: competition.py
competition_app/templates/: competition_form.html  delete_competition_confirmation.html  delete_reservation_confirmation.html  list_competitions.html  list_reservations.html
competition_app/templates/partials/: competition_form_title.html
competition_app/urls/: admin.py  authenticated.py  public.py
competition_app/views/: admin.py  authenticated.py
email_app/: .env  main.py  send_email.py  templates.py
flake8_report/: app.report.html  app.source.html  authentication_app.models copy.report.html  authentication_app.models copy.source.html  authentication_app.views.report.html  authentication_app.views.source.html  index.html  readme.md
mission/: schema_base_de_donnee_P11.xlsx
templates/: base.html  booking.html  form.html  index.html  welcome.html
templates/partials/: flash_messages.html  nav.html
tests/: app_test.db  conftest.py
tests/club_app/models/: test_club.py
tests/performance/: locustfile.py
(+15 files in other folders)
