[tool.poetry]
name = "gudlft"
version = "0.1.0"
description = ""
authors = ["Nidal Chateur <nidalchateur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-bootstrap5 = "^0.1.dev1"
pytest = "^7.4.3"
pytest-flask = "^1.3.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
locust = "^2.18.0"
pillow = "^10.1.0"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
