[tool.poetry]
name = "gudlft"
version = "0.1.0"
description = ""
authors = ["Nidal Chateur <nidalchateur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
pytest = "^7.4.3"
pytest-flask = "^1.3.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
locust = "^2.18.0"
pillow = "^10.1.0"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"
python-dotenv = "^1.0.0"
flask-wtf = "^1.2.1"
email-validator = "^2.1.0.post1"
flask-migrate = "^4.0.5"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-uploads = "^0.2.1"
python-decouple = "^3.8"
bootstrap-flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

